[project]
name = "caleb-orders"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Micah Ferrill", email = "mcferrill@gmail.com"},
]
dependencies = [
    "pymupdf>=1.24.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
